--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Django==3.0.8
-asgiref==3.2.10
+Django==3.1
 mysqlclient==2.0.1
-pytz==2020.1
-setuptools==49.2.0
-sqlparse==0.3.1
-djangorestframework==3.11.0
+djangorestframework==3.11.1
+celery==4.4.7
+django-redis==4.12.1
